# team-status-dashboard

./: .gitignore  HOSTING.md  README.md  config.json  pyproject.toml
.github/workflows/: dashboard.yml  web.yml
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-05-29-team-status-dashboard.md  2026-06-03-team-status-command-view-react-app.md  2026-06-04-command-view-phase-1-supabase-backend.md  2026-06-04-command-view-phase-2-login.md  2026-06-04-command-view-phase-3-crud.md  2026-06-04-command-view-phase-3b-honest-roster-model.md  (+1 more)
scripts/: com.ada.teamstatus.plist  com.teamstatus.dashboard.plist  setup-schedule.sh
src/team_status/: classify.py  cli.py  config.py  corrections.py  demo.py  diff.py  linear_client.py  models.py  render.py  slack_client.py  snapshot.py
tests/: test_classify.py  test_cli.py  test_config.py  test_corrections.py  test_demo.py  test_diff.py  test_linear_client.py  test_models.py  test_render.py  test_slack_client.py
tests/fixtures/: linear_graphql_response.json
web/: .env.example  .npmrc  ACCESSIBILITY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/design-reference/: CommandView.jsx  README.md  components.jsx  data.js  tokens.css
web/public/: roster.json
web/src/: App.test.tsx  App.tsx  Root.test.tsx  Root.tsx  a11y.test.tsx  categories.ts  index.css  main.tsx  roster.test.ts  roster.ts  rosterActions.ts  since.test.ts  since.ts  tokens.categories.css  types.test.ts  types.ts  useRoster.test.ts  useRoster.ts
web/supabase/: schema.sql
(+51 files in other folders)
